[package]
name = "ribasome_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25", features = ["full"] }
axum = "0.6.8"
axum-macros = "0.3.7"
tower-http = { version = "0.4.0", features = ["cors", "trace"] } # added
http = "0.2.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7.1", features = [
    "runtime-tokio-rustls",
    "uuid",
    "time",
    "chrono",
    "postgres",
    "macros",

] }
url = "2.3.1"
uuid = { version = "1.1.2", features = ["serde"] }
geo = { version = "0.26.0", features = ["serde"] }
thiserror = "1.0.38"
color-eyre = "0.6.2"
miette = { version = "5.10.0", features = ["fancy", "serde"] }
config = { version = "0.13.3", default-features = false, features = [
    "indexmap",
    "toml",
] }
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
strum = { version = "0.24.1", features = ["derive"] }
csv = "1.2.1"
regex = "1.7.3"
lazy_static = "1.4"
bevy = { version = "0.11.0", default-features = false, features = [
    "bevy_render",
] }
mime = "0.3"
reqwest = { version = "0.11.18", features = ['json'] }
pbkdf2 = { version = "0.12.2", features = ['simple'] }
rand_chacha = "0.3.1"
rand_core = { version = "0.6", features = ["std"] }
cookie = "0.16.0"
rand = "0.8.5"
aws-config = "0.56.0"
aws-sdk-s3 = "0.28.0"
aws-smithy-http = "0.56.0"

[dev-dependencies]
hyper = { version = "0.14.17", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }


# Defining bin here to make multi stage docker build work
[[bin]]
name = "rust-demo-server"
path = "src/main.rs"
